Fixed sidebar accordion body's overflow problem

--- a/src/Components/Header/SideBarMenu/styles.module.css
+++ b/src/Components/Header/SideBarMenu/styles.module.css
@@ -11,6 +11,9 @@
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
+.accordion-header[aria-expanded="true"] + div {
+  overflow: visible !important;
+}
 .navCards:last-child {
   margin-bottom: 1rem;
 }
